carbon - fix color picker overflow

--- a/css/fields.css
+++ b/css/fields.css
@@ -18,7 +18,7 @@
 .carbon-datepicker-trigger,
 .carbon-color-preview 
 { display: inline; margin: 0 7px 0 3px; padding: 3px 13px;  line-height: 20px; -webkit-border-radius: 4px; border-radius: 4px; border: 1px solid #DFDFDF; cursor: pointer; }
-.carbon-color-container { position: absolute; top: 26px; left: 3px; display: none; width: 195px; height: 195px; background: #fafafa; border: 1px solid #ccc; box-shadow: 3px 3px 5px rgba(60, 60, 60, .3); -webkit-border-bottom-right-radius: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomright: 4px; -moz-border-radius-bottomleft: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; z-index: 1; }
+.carbon-color-container { display: none; width: 195px; height: 195px; margin: 0 0 0 3px; background: #fafafa; border: 1px solid #ccc; box-shadow: 3px 3px 5px rgba(60, 60, 60, .3); -webkit-border-bottom-right-radius: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomright: 4px; -moz-border-radius-bottomleft: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; z-index: 1; }
 
 .carbon-datepicker-trigger { background:url(images/icon-date.png) no-repeat center center; margin-left:6px;}
 
